Fixed ajax race condition. Add crews section and subtitle section. We are displaying OMDB data now.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:900&display=swap" rel="stylesheet">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/metrics-graphics/2.11.0/metricsgraphics.min.css">
-    <title>ThinkAgile CP Material UI</title>
+    <title>Feng's Movie Fans</title>
   </head>
 
   <body>
